# Euclidean

./: .env  README.md  main.py  music.py  playlist.py  pyproject.toml  server.py
database/: euclidean.db  init.py  sql.py  test.py  utils.py
